# WatchNumberGenerator

./: .gitignore  CHANGELOG.md  MACOS_SETUP.md  PROJECT_SETUP.md  QUICKSTART.md  README.md  REFACTORING_PLAN.md  pyproject.toml  requirements.txt  run.sh  setup_macos.sh
src/: __init__.py  main.py  window.py
src/core/: __init__.py  cairo_distortions.py  distortion.py  distortion_2d.py  exporter.py  font_handler.py  mesh_generator.py  unified_mesh_pipeline.py
src/ui/: __init__.py  export_dialog.py  preview_2d.py  preview_3d.py  preview_3d_gl.py
src/utils/: geometry.py  precise_fit.py  vector_fit.py
